# jornada-de-dados-estrutura-de-projeto

./: README.md  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
tests/: test_pipeline.py
